[tool.poetry]
name = "restaurant_assistant_auth_service"
version = "0.1.0"
description = ""
authors = ["Bogdan Dovgal"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
SQLAlchemy = "^2.0.15"
alembic = "^1.11.1"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}
asyncpg = "^0.27.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
uvicorn = "^0.22.0"
celery = "^5.3.4"
flower = "^2.0.1"
redis = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
